[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.0", "wheel"]

[project]
name = "pywibeee"
dynamic = ["version"]
readme = {file = "README.rst", content-type = "text/x-rst"}
description = "Python library and CLI for WiBeee (old Mirubee) energy meter with Home Assistant integration"
authors = [{ name = "fquinto", email = "fran.quinto@gmail.com" }]
license = "GPL-2.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Shells",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
]
keywords = ["homeautomation", "cli", "interface", "wibeee", "mirubee",
              "energy meter", "smart meter", "hass", "home-assistant",
              "circutor", "smilics"]
dependencies = [
    "aiohttp>=3.9.0",
    "xmltodict >= 0.13.0",
    "httpx >= 0.23.1",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/fquinto/pywibeee"
Documentation = "https://github.com/fquinto/pywibeee"
Repository = "https://github.com/fquinto/pywibeee"
Issues = "https://github.com/fquinto/pywibeee/issues"

[tool.setuptools.dynamic]
version = {attr = "pywibeee.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pywibeee*"]
exclude = ["custom_components*", "tests*", "docs*", "firmware*",
           "webserver*", "emulator*", "CLI*"]

[project.scripts]
pywibeee = "pywibeee.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13.300",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
