[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE
description = Command line interface (CLI) for WiBeee (old Mirubee) meter
description_file = README.md
description-content-type = text/markdown
name = pywibeee
version = attr: pywibeee.__version__
classifiers =
    Programming Language :: Python :: 3

[options]
packages = pywibeee
install_requires =
    xmltodict
    requests
    aiohttp
    httpx
